<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:id="@+id/serverHostTextView"
                android:text="@string/server_host_view"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/serverHostEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/serverPortTextView"
                android:text="@string/server_port_view"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/serverPortEditText"
                android:inputType="number"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/userNameTextView"
                android:text="@string/username_view"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/userNameEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/passwordTextView"
                android:text="@string/password_view"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/passwordEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/firstNameTextView"
                android:text="@string/first_name_view"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/lastNameTextView"
                android:text="@string/last_name_view"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/emailTextView"
                android:text="@string/email_view"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/emailEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/genderTextView"
                android:text="@string/gender_view"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                 >

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_male" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_female" />

            </RadioGroup>

        </TableRow>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="0.2in"
            android:gravity="center" >


            <Button
                android:id="@+id/singInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" />

        </LinearLayout>






    </TableLayout>

</LinearLayout>