<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/first_name_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:paddingLeft="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingLeft="8dp"
                android:layout_weight="2"
                android:text="@string/first_name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/last_name_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:paddingLeft="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingLeft="8dp"
                android:layout_weight="2"
                android:text="@string/last_name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/gender_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:paddingLeft="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingLeft="8dp"
                android:layout_weight="2"
                android:text="@string/gender" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

        </LinearLayout>

    </LinearLayout>

    <ExpandableListView
        android:id="@+id/person_detail_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>